; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_transaction.c_put_transaction.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_transaction.c_put_transaction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_transaction = type { %struct.TYPE_4__, i32, i32 }
%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@btrfs_transaction_cachep = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @put_transaction(%struct.btrfs_transaction* %0) #0 {
  %2 = alloca %struct.btrfs_transaction*, align 8
  store %struct.btrfs_transaction* %0, %struct.btrfs_transaction** %2, align 8
  %3 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %4 = getelementptr inbounds %struct.btrfs_transaction, %struct.btrfs_transaction* %3, i32 0, i32 2
  %5 = call i64 @atomic_read(i32* %4)
  %6 = icmp eq i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @WARN_ON(i32 %7)
  %9 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %10 = getelementptr inbounds %struct.btrfs_transaction, %struct.btrfs_transaction* %9, i32 0, i32 2
  %11 = call i64 @atomic_dec_and_test(i32* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %40

13:                                               ; preds = %1
  %14 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %15 = getelementptr inbounds %struct.btrfs_transaction, %struct.btrfs_transaction* %14, i32 0, i32 1
  %16 = call i32 @list_empty(i32* %15)
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @BUG_ON(i32 %19)
  %21 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %22 = getelementptr inbounds %struct.btrfs_transaction, %struct.btrfs_transaction* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @WARN_ON(i32 %25)
  %27 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %28 = getelementptr inbounds %struct.btrfs_transaction, %struct.btrfs_transaction* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = call i32 @list_empty(i32* %29)
  %31 = icmp ne i32 %30, 0
  %32 = xor i1 %31, true
  %33 = zext i1 %32 to i32
  %34 = call i32 @WARN_ON(i32 %33)
  %35 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %36 = call i32 @memset(%struct.btrfs_transaction* %35, i32 0, i32 16)
  %37 = load i32, i32* @btrfs_transaction_cachep, align 4
  %38 = load %struct.btrfs_transaction*, %struct.btrfs_transaction** %2, align 8
  %39 = call i32 @kmem_cache_free(i32 %37, %struct.btrfs_transaction* %38)
  br label %40

40:                                               ; preds = %13, %1
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @list_empty(i32*) #1

declare dso_local i32 @memset(%struct.btrfs_transaction*, i32, i32) #1

declare dso_local i32 @kmem_cache_free(i32, %struct.btrfs_transaction*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
